--- a/UniversityApiBackend/appsettings.json
+++ b/UniversityApiBackend/appsettings.json
@@ -12,11 +12,11 @@
   },
   "JsonWebTokenKeys": {
     "ValidateIssuerSigningKey": true,
-    "IssuerSigningKey": "",
+    "IssuerSigningKey": "64A63153-11C1-4919-9133-EFAF99A9B456",
     "ValidateIssuer": true,
-    "ValidIssuer": "https://localhost:7255",
+    "ValidIssuer": "https://localhost:7106",
     "ValidateAudience": true,
-    "ValidAudience": "https://localhost:7255",
+    "ValidAudience": "https://localhost:7106",
     "RequireExpirationTime": true,
     "ValidateLifeTime":  true
   }
