--- a/UniversityApiBackend/appsettings.json
+++ b/UniversityApiBackend/appsettings.json
@@ -18,6 +18,38 @@
     "ValidateAudience": true,
     "ValidAudience": "https://localhost:7106",
     "RequireExpirationTime": true,
-    "ValidateLifeTime":  true
+    "ValidateLifeTime": true
+  },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Verbose",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.LifeTime": "Information"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "./logs/log.txt",
+          "rollingInterval": "Day"
+        }
+      },
+      {
+        "Name": "MSSqlServer",
+        "Args": {
+          "connectionString": "UniversityDb",
+          "sinkOptionsSection": {
+            "tableName": "Logs",
+            "schemaName": "EventLogging",
+            "autoCreateSqlTable": true,
+            "batchPostingLimit": 1000,
+            "period":  "0.00:00:30"
+          },
+          "restrictedMinimumLevel": "Verbose"
+        }
+      }
+    ]
   }
 }
